[gd_scene load_steps=6 format=3 uid="uid://dfeel62o5iuii"]

[ext_resource type="Script" path="res://objects/DialogBubbles/DialogBubble.gd" id="1_bhqqj"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="1_xim3l"]
[ext_resource type="FontFile" uid="uid://d3i2opvfjydpt" path="res://asset_files/fonts/m5x7.ttf" id="2_eiqxj"]
[ext_resource type="AudioStream" uid="uid://cxhas43nwg3rq" path="res://asset_files/audio/talk.wav" id="4_uroa4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7s4mc"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
anti_aliasing = false

[node name="DialogBubble" type="CanvasLayer"]
script = ExtResource("1_bhqqj")

[node name="Panel" type="Panel" parent="."]
offset_right = 400.0
offset_bottom = 40.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7s4mc")

[node name="MarginBox" type="MarginContainer" parent="Panel"]
clip_contents = true
layout_mode = 0
offset_right = 400.0
offset_bottom = 40.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="Container" type="BoxContainer" parent="Panel/MarginBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Portrait" type="TextureRect" parent="Panel/MarginBox/Container"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
expand_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginBox/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -3

[node name="CharacterLabel" type="RichTextLabel" parent="Panel/MarginBox/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_fonts/normal_font = ExtResource("2_eiqxj")
theme_override_font_sizes/normal_font_size = 12
text = "Character name
"
fit_content = true

[node name="DialogLabel" type="RichTextLabel" parent="Panel/MarginBox/Container/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_eiqxj")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Dialog Goes Here...
DDDASDASDASDASDASDSADASDASD"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("1_xim3l")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uroa4")

[connection signal="spoke" from="Panel/MarginBox/Container/VBoxContainer/DialogLabel" to="." method="_on_dialog_label_spoke"]
